// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Notification Notification should render with default props 1`] = `
<Notification
  classes={
    Object {
      "error": "Connect-pure-Notification---error-3",
      "root": "Connect-pure-Notification---root-1",
      "success": "Connect-pure-Notification---success-2",
    }
  }
  dismissNotification={[Function]}
  displayNotification={[Function]}
  notification={
    Object {
      "data": Object {
        "message": "__MESSAGE__",
        "type": "ERROR",
      },
      "show": true,
    }
  }
/>
`;

exports[`components/Notification Render should render collapsed if message is missing 1`] = `
<WithStyles(Collapse)
  in={true}
/>
`;

exports[`components/Notification Render should render collapsed if not visible 1`] = `
<WithStyles(Collapse)
  in={false}
/>
`;

exports[`components/Notification Render should render expanded for error message 1`] = `
<WithStyles(Collapse)
  in={false}
>
  <WithTheme(Fade)
    in={false}
  >
    <WithStyles(Typography)
      className="__ROOT__ __ERROR__"
    >
      __MESSAGE__
    </WithStyles(Typography)>
  </WithTheme(Fade)>
</WithStyles(Collapse)>
`;

exports[`components/Notification Render should render expanded for success message 1`] = `
<WithStyles(Collapse)
  in={false}
>
  <WithTheme(Fade)
    in={false}
  >
    <WithStyles(Typography)
      className="__ROOT__ __SUCCESS__"
    >
      __MESSAGE__
    </WithStyles(Typography)>
  </WithTheme(Fade)>
</WithStyles(Collapse)>
`;
